--- a/src/index.html
+++ b/src/index.html
@@ -1,69 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Необходимые Мета-теги всегда на первом месте -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous"> -->
-    <link rel="stylesheet" href="../dist/css/bootstrap-grid.min.css">
-    <link rel="stylesheet" href="../dist/css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="../dist/css/style.min.css">
+<head>
+  <!-- Необходимые Мета-теги всегда на первом месте -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>Uber777</title>
-  </head>
-  <body>
-    <header class="header">
-        <nav>
-          <div class="container">
-            <ul class="menu">
-              <li class="menu_item"><a href="#" class="menu_link">Главная</a></li>
-              <li class="menu_item"><a href="#" class="menu_link">Со своим автомобилем</a></li>
-              <li class="menu_item"><a href="#" class="menu_link">На автомобиле компании</a></li>
-              <li class="menu_item"><a href="#" class="menu_link">Требования</a></li>
-              <li class="menu_item"><a href="#" class="menu_link">Контакты</a></li>
-              <li class="menu_item"><a href="#" class="menu_link">Оставить заявку</a></li>
-            </ul>
-          </div>
-        </nav>
-        <div class="subheader">
-          <div class="container">
-            <!-- p.s  col без row работает не правильно!!! -->
-            <div class="row">
-              <div class="col-md-4 offset-md-1">
-                <a href="#" class="subheader_logo"><img src="logo/Logo.png" alt=""></a>
-                <div class="subheader_official">Официальный партнер Uber в Москве</div>
-              </div>
-              <div class="col-md-2 offset-md-2">
-                <div class="subheader_call">Звоните нам ежедневно</div>
-                <a href="tel:+74957970988" class="subheader_phone">8 495 797 09 88</a>
-              </div>
-              <div class="col-md-2">
-                <button class="subheader_btn">заказать звонок</button>
-              </div>
-            </div>
-          </div>
-        </div>
-    </header>
+  <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous"> -->
+  <link rel="stylesheet" href="../dist/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="../dist/css/bootstrap-reboot.min.css">
+  <link rel="stylesheet" href="../dist/css/style.min.css">
 
-    <section class="promo">
+  <title>Uber777</title>
+</head>
+
+<body>
+  <header class="header">
+    <nav>
       <div class="container">
+        <ul class="menu">
+          <li class="menu_item"><a href="#" class="menu_link">Главная</a></li>
+          <li class="menu_item"><a href="#" class="menu_link">Со своим автомобилем</a></li>
+          <li class="menu_item"><a href="#" class="menu_link">На автомобиле компании</a></li>
+          <li class="menu_item"><a href="#" class="menu_link">Требования</a></li>
+          <li class="menu_item"><a href="#" class="menu_link">Контакты</a></li>
+          <li class="menu_item"><a href="#" class="menu_link">Оставить заявку</a></li>
+        </ul>
+      </div>
+    </nav>
+    <div class="subheader">
+      <div class="container">
+        <!-- p.s  col без row работает не правильно!!! -->
         <div class="row">
-          <div class="col-md-10 offset-md-1">
-            <h1 class="promo_header">КОМПАНИЯ UBER PARTNERS!</h1>
-            <h2 class="promo_subheader">ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!</h2>
-            <div class="promo_descr">
-              Компания UBER  динамически развивающаяся. Компания на рынке занимает лидирующее место среди таксомоторных компаний, Компания абсолютно прозрачная вы можете контролировать все процессы у себя в личном кабинете. Бонуcная система.Помимо выполненной работы по заказам, компания начисляет бонусы за пиковое время.
-              <br><br>
-              Мы одни из партнеров и зарекомендовали себя как одна из лучших команд в городе Москве.  Водители у нас зарабатывают от 80000- 120000 в месяц.
-            </div>
-            <button class="promo_btn">ОТПРАВИТЬ ЗАЯВКУ!</button>
+          <div class="col-md-4 offset-md-1">
+            <a href="#" class="subheader_logo"><img src="logo/Logo.png" alt=""></a>
+            <div class="subheader_official">Официальный партнер Uber в Москве</div>
+          </div>
+          <div class="col-md-2 offset-md-2">
+            <div class="subheader_call">Звоните нам ежедневно</div>
+            <a href="tel:+74957970988" class="subheader_phone">8 495 797 09 88</a>
+          </div>
+          <div class="col-md-2">
+            <button class="subheader_btn">заказать звонок</button>
           </div>
         </div>
       </div>
-    </section>
-    <div class="text"></div>
-    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script> -->
-  </body>
+    </div>
+  </header>
+
+  <section class="promo">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-10 offset-md-1">
+          <h1 class="promo_header">КОМПАНИЯ UBER PARTNERS!</h1>
+          <h2 class="promo_subheader">ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!</h2>
+          <div class="promo_descr">
+            Компания UBER динамически развивающаяся. Компания на рынке занимает лидирующее место среди таксомоторных
+            компаний, Компания абсолютно прозрачная вы можете контролировать все процессы у себя в личном кабинете.
+            Бонуcная система.Помимо выполненной работы по заказам, компания начисляет бонусы за пиковое время.
+            <br><br>
+            Мы одни из партнеров и зарекомендовали себя как одна из лучших команд в городе Москве. Водители у
+            нас зарабатывают от 80000- 120000 в месяц.
+          </div>
+          <button class="promo_btn">ОТПРАВИТЬ ЗАЯВКУ!</button>
+        </div>
+      </div>
+    </div>
+  </section>
+  <div class="text"></div>
+  <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script> -->
+</body>
+
 </html>
