--- a/src/index.html
+++ b/src/index.html
@@ -58,19 +58,33 @@
           <h1 class="promo_header">КОМПАНИЯ UBER PARTNERS!</h1>
           <h2 class="promo_subheader">ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!</h2>
           <div class="promo_descr">
-            Компания UBER динамически развивающаяся. Компания на рынке занимает лидирующее место среди таксомоторных
+            Компания UBER динамически развивающаяся. Компания на рынке занимает лидирующее место среди таксомоторных
             компаний, Компания абсолютно прозрачная вы можете контролировать все процессы у себя в личном кабинете.
-            Бонуcная система.Помимо выполненной работы по заказам, компания начисляет бонусы за пиковое время.
+            Бонуcная система.Помимо выполненной работы по заказам, компания начисляет бонусы за пиковое время.
             <br><br>
             Мы одни из партнеров и зарекомендовали себя как одна из лучших команд в городе Москве. Водители у
-            нас зарабатывают от 80000- 120000 в месяц.
+            нас зарабатывают от 80000- 120000 в месяц.
           </div>
           <button class="promo_btn">ОТПРАВИТЬ ЗАЯВКУ!</button>
         </div>
       </div>
     </div>
   </section>
-  <div class="text"></div>
+  <section class="capability">
+    <div class="container">
+      <div class="capability_descr">преимущества</div>
+      <h2 class="capability_header">8 причин начать работать с нами</h2>
+      <div class="row">
+        <div class="col-md-6">
+          <h3 class="capability_title">Никаких наличных, оплата происходит автоматически</h3>
+          <p class="capability_info">Стоимость поездки оплачивается пассажиром с привязанной банковской карты, т.е. нет никаких рисков связанных
+            с перевозкой наличности как для пассажира, так и для водителя, Вам не нужно искать мелкие деньги для
+            размена.</p>
+          <img class="capability_icon" src="icon/key.png" alt="key">
+        </div>
+      </div>
+    </div>
+  </section>
   <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script> -->
 </body>
 
