--- a/src/index.html
+++ b/src/index.html
@@ -75,12 +75,14 @@
       <div class="capability_descr">преимущества</div>
       <h2 class="capability_header">8 причин начать работать с нами</h2>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-5 offset-md-1">
           <h3 class="capability_title">Никаких наличных, оплата происходит автоматически</h3>
-          <p class="capability_info">Стоимость поездки оплачивается пассажиром с привязанной банковской карты, т.е. нет никаких рисков связанных
+          <p class="capability_info">Стоимость поездки оплачивается пассажиром с привязанной банковской карты, т.е.
+            нет никаких рисков связанных
             с перевозкой наличности как для пассажира, так и для водителя, Вам не нужно искать мелкие деньги для
             размена.</p>
-          <img class="capability_icon" src="icon/key.png" alt="key">
+          <i class="fa fa-key"></i>
+
         </div>
       </div>
     </div>
