--- a/src/index.html
+++ b/src/index.html
@@ -75,14 +75,97 @@
       <div class="capability_descr">преимущества</div>
       <h2 class="capability_header">8 причин начать работать с нами</h2>
       <div class="row">
-        <div class="col-md-5 offset-md-1">
-          <h3 class="capability_title">Никаких наличных, оплата происходит автоматически</h3>
-          <p class="capability_info">Стоимость поездки оплачивается пассажиром с привязанной банковской карты, т.е.
-            нет никаких рисков связанных
-            с перевозкой наличности как для пассажира, так и для водителя, Вам не нужно искать мелкие деньги для
-            размена.</p>
-          <i class="fa fa-key"></i>
-
+        <div class="col-md-6">
+          <div class="capability_block">
+            <div class="capability_img">
+              <i class="fa fa-purse"></i>
+            </div>
+            <div class="capability_text">
+              <h3 class="capability_title">Никаких наличных, оплата происходит автоматически</h3>
+              <p class="capability_info">Стоимость поездки оплачивается пассажиром с привязанной банковской карты, т.е.
+                нет никаких рисков связанных
+                с перевозкой наличности как для пассажира, так и для водителя, Вам не нужно искать мелкие деньги для
+                размена.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="capability_block">
+            <div class="capability_img">
+              <i class="fa fa-timeline"></i>
+            </div>
+            <div class="capability_text">
+              <h3 class="capability_title">Комиссия 8% + БОНУСЫ</h3>
+              <p class="capability_info">У нас минимальная комиссия и мы выплачиваем бонусы за каждую поездку, некоторые наши конкуренты оставляют бонусы себе. Мы работаем честно и с нами водители зарабатывают больше!</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="capability_block">
+            <div class="capability_img">
+              <i class="fa fa-money"></i>
+            </div>
+            <div class="capability_text">
+              <h3 class="capability_title">Высокий доход с гарантированнымивыплатами</h3>
+              <p class="capability_info">Мы выплачиваем заработную плату на личную банковскую карту водителя! Вам не нужно оформлять ООО, ИП, платить налоги, подавать декларацию, оплачивать бухгалтерские услуги и ведение банковского счета.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="capability_block">
+            <div class="capability_img">
+              <i class="fa fa-day"></i>
+            </div>
+            <div class="capability_text">
+              <h3 class="capability_title">Работа в удобное время, никакихграфиков</h3>
+              <p class="capability_info">Вы просто нажимаете кнопку выйти на линию для начала работы, когда решите закончить, нажимаете выйти с линии. Вы можете подраба-
+                тывать только утром, вечером, в выходные или праздничные дни! </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="capability_block">
+            <div class="capability_img">
+              <i class="fa fa-key"></i>
+            </div>
+            <div class="capability_text">
+              <h3 class="capability_title">Комфортное, прозрачное и простоеподключение</h3>
+              <p class="capability_info">Мы подключаем дистанционно и бесплатно, Вам нет необходимости приезжать к нам! Вы присылаете нам копии документов, мы регистрируем Вас и присылаем данные для подключения, через 1-2 дня Вы можете начинать работать!</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="capability_block">
+            <div class="capability_img">
+              <i class="fa fa-map"></i>
+            </div>
+            <div class="capability_text">
+              <h3 class="capability_title">Всегда большое количество заказов</h3>
+              <p class="capability_info">Приложение показывает, где на данный момент больше всего заказов и где действуют повышенные тарифы. У Вас не будет простоя и холостых пробегов. Наши пассажиры всегда приятные и абсолютно неконфликтные люди, которых приятно возить.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="capability_block">
+            <div class="capability_img">
+              <i class="fa fa-phone"></i>
+            </div>
+            <div class="capability_text">
+              <h3 class="capability_title">Круглосуточная поддержка</h3>
+              <p class="capability_info">В Uber действует круглосуточная поддержка водителей по электронной почте. Если что-то непонятно, Вы всегда можете задать вопрос через On-line консультацию.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="capability_block">
+            <div class="capability_img">
+              <i class="fa fa-car"></i>
+            </div>
+            <div class="capability_text">
+              <h3 class="capability_title">Без шашечек и наклеек</h3>
+              <p class="capability_info">Вам не нужно менять цвет, устанавливать «шашки» на автомобиль и обклеивать его наклейками.</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
