--- a/src/index.html
+++ b/src/index.html
@@ -216,6 +216,14 @@
       </div>
     </div>
   </section>
+  <section class="choice">
+    <div class="container">
+      <div class="label">возможности</div>
+      <div class="title">Выбор - отличная штука!</div>
+      <div class="subtitle">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
+      <div class="choice_text">Машины на каждый день.<br>Лучше, быстрее и дешевле, чем такси</div>
+    </div>
+  </section>
   <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script> -->
 </body>
 
