--- a/src/index.html
+++ b/src/index.html
@@ -96,7 +96,8 @@
             </div>
             <div class="capability_text">
               <h3 class="capability_title">Комиссия 8% + БОНУСЫ</h3>
-              <p class="capability_info">У нас минимальная комиссия и мы выплачиваем бонусы за каждую поездку, некоторые наши конкуренты оставляют бонусы себе. Мы работаем честно и с нами водители зарабатывают больше!</p>
+              <p class="capability_info">У нас минимальная комиссия и мы выплачиваем бонусы за каждую поездку, некоторые
+                наши конкуренты оставляют бонусы себе. Мы работаем честно и с нами водители зарабатывают больше!</p>
             </div>
           </div>
         </div>
@@ -107,7 +108,9 @@
             </div>
             <div class="capability_text">
               <h3 class="capability_title">Высокий доход с гарантированнымивыплатами</h3>
-              <p class="capability_info">Мы выплачиваем заработную плату на личную банковскую карту водителя! Вам не нужно оформлять ООО, ИП, платить налоги, подавать декларацию, оплачивать бухгалтерские услуги и ведение банковского счета.</p>
+              <p class="capability_info">Мы выплачиваем заработную плату на личную банковскую карту водителя! Вам не
+                нужно оформлять ООО, ИП, платить налоги, подавать декларацию, оплачивать бухгалтерские услуги и ведение
+                банковского счета.</p>
             </div>
           </div>
         </div>
@@ -118,7 +121,8 @@
             </div>
             <div class="capability_text">
               <h3 class="capability_title">Работа в удобное время, никакихграфиков</h3>
-              <p class="capability_info">Вы просто нажимаете кнопку выйти на линию для начала работы, когда решите закончить, нажимаете выйти с линии. Вы можете подраба-
+              <p class="capability_info">Вы просто нажимаете кнопку выйти на линию для начала работы, когда решите
+                закончить, нажимаете выйти с линии. Вы можете подраба-
                 тывать только утром, вечером, в выходные или праздничные дни! </p>
             </div>
           </div>
@@ -130,7 +134,9 @@
             </div>
             <div class="capability_text">
               <h3 class="capability_title">Комфортное, прозрачное и простоеподключение</h3>
-              <p class="capability_info">Мы подключаем дистанционно и бесплатно, Вам нет необходимости приезжать к нам! Вы присылаете нам копии документов, мы регистрируем Вас и присылаем данные для подключения, через 1-2 дня Вы можете начинать работать!</p>
+              <p class="capability_info">Мы подключаем дистанционно и бесплатно, Вам нет необходимости приезжать к нам!
+                Вы присылаете нам копии документов, мы регистрируем Вас и присылаем данные для подключения, через 1-2
+                дня Вы можете начинать работать!</p>
             </div>
           </div>
         </div>
@@ -141,7 +147,9 @@
             </div>
             <div class="capability_text">
               <h3 class="capability_title">Всегда большое количество заказов</h3>
-              <p class="capability_info">Приложение показывает, где на данный момент больше всего заказов и где действуют повышенные тарифы. У Вас не будет простоя и холостых пробегов. Наши пассажиры всегда приятные и абсолютно неконфликтные люди, которых приятно возить.</p>
+              <p class="capability_info">Приложение показывает, где на данный момент больше всего заказов и где
+                действуют повышенные тарифы. У Вас не будет простоя и холостых пробегов. Наши пассажиры всегда приятные
+                и абсолютно неконфликтные люди, которых приятно возить.</p>
             </div>
           </div>
         </div>
@@ -152,7 +160,8 @@
             </div>
             <div class="capability_text">
               <h3 class="capability_title">Круглосуточная поддержка</h3>
-              <p class="capability_info">В Uber действует круглосуточная поддержка водителей по электронной почте. Если что-то непонятно, Вы всегда можете задать вопрос через On-line консультацию.</p>
+              <p class="capability_info">В Uber действует круглосуточная поддержка водителей по электронной почте. Если
+                что-то непонятно, Вы всегда можете задать вопрос через On-line консультацию.</p>
             </div>
           </div>
         </div>
@@ -163,7 +172,8 @@
             </div>
             <div class="capability_text">
               <h3 class="capability_title">Без шашечек и наклеек</h3>
-              <p class="capability_info">Вам не нужно менять цвет, устанавливать «шашки» на автомобиль и обклеивать его наклейками.</p>
+              <p class="capability_info">Вам не нужно менять цвет, устанавливать «шашки» на автомобиль и обклеивать его
+                наклейками.</p>
             </div>
           </div>
         </div>
@@ -175,7 +185,8 @@
     <div class="container">
       <div class="label">возможности</div>
       <div class="title">мобильное приложение убер</div>
-      <div class="subtitle">Сделайте заказ, совершите поездку и оплатите ее стоимость, используя свой мобильный телефон</div>
+      <div class="subtitle">Сделайте заказ, совершите поездку и оплатите ее стоимость, используя свой мобильный телефон
+      </div>
       <div class="row">
         <div class="col-md-4">
           <div class="mobile_item mobile_item_1">
@@ -222,6 +233,71 @@
       <div class="title">Выбор - отличная штука!</div>
       <div class="subtitle">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
       <div class="choice_text">Машины на каждый день.<br>Лучше, быстрее и дешевле, чем такси</div>
+    </div>
+  </section>
+  <section class="require">
+    <div class="container">
+      <div class="label">возможности</div>
+      <div class="title">условия и требования</div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="require_block">
+            <div class="require_title">УСЛОВИЯ: со своим авто:</div>
+            <ul class="require_list">
+              <li>Подключаем к системе UBER под 10%.</li>
+              <li>Ни каких взносов 0%!</li>
+              <li>Можем подключать удаленно без приезда в офис</li>
+              <li>ИП не требуется</li>
+              <li>Заказы распределяются без учета рейтинга ближай-<br>
+                шим водителям</li>
+              <li>Работа только по безналичному расчету</li>
+              <li>Деньги перечисляем на карту водителю или наличны-<br>
+                ми в офисе</li>
+            </ul>
+            <div class="require_descr">В день заработок составляет 7000-12000р + бонус 3000т рублей</div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="require_block">
+            <div class="require_title">УСЛОВИЯ: на авто компании:</div>
+            <ul class="require_list">
+              <li>Предоставляем авто без залога</li>
+              <li>Без ежедневных выплат по аренде</li>
+              <li>Среда пятница и суббота работа на компанию осталь-
+                ные дни вы работаете на себя</li>
+            </ul>
+            <div class="require_descr"></div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="require_block require_block_nmb warning">
+            <div class="require_title">ТРЕБОВАНИЕ:</div>
+            <ul class="require_list">
+              <li>Наличие автомобиля без рекламы</li>
+              <li>Автомобиль не должен быть желтый и не с желтыми
+                номерами</li>
+              <li>Машина не старше 3 лет</li>
+              <li>Стаж вождения не менее 3 лет</li>
+              <li>Девайс на системе андроид 4.0 и выше(самсунг)</li>
+            </ul>
+            <div class="require_descr"></div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="require_block require_block_nmb warning">
+            <div class="require_title">ДОКУМЕНТЫ:</div>
+            <ul class="require_list">
+              <li>Права 2 стороны</li>
+              <li>Паспорт лицевая сторона</li>
+              <li>СтС</li>
+              <li>Лицензия (если есть)</li>
+              <li>Номер телефона</li>
+              <li>Номер карты для перечисления денег(указать в письме)!</li>
+            </ul>
+            <div class="require_descr"></div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script> -->
