--- a/src/index.html
+++ b/src/index.html
@@ -300,6 +300,14 @@
       </div>
     </div>
   </section>
+  <section class="map">
+    <div class="container">
+      <div class="label">города</div>
+      <div class="title">По всему миру</div>
+      <div class="subtitle">Мы в вашем городе и по всему миру</div>
+      <a href="#" class="map_ref">посмотреть все города</a>
+    </div>
+  </section>
   <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script> -->
 </body>
 
