--- a/src/index.html
+++ b/src/index.html
@@ -302,12 +302,35 @@
   </section>
   <section class="map">
     <div class="container">
-      <div class="label">города</div>
-      <div class="title">По всему миру</div>
-      <div class="subtitle">Мы в вашем городе и по всему миру</div>
+      <div class="map_title">
+        <div class="label">города</div>
+        <div class="title">По всему миру</div>
+        <div class="subtitle">Мы в вашем городе и по всему миру</div>
+      </div>
       <a href="#" class="map_ref">посмотреть все города</a>
     </div>
   </section>
+  <footer>
+    <div class="footer_icon">
+      <i class="fa fa-vk" aria-hidden="true"></i>
+    </div>
+    <div class="footer_content">
+      <div class="footer_menu">
+        <a href="#">на главную</a>
+        <a href="#">города</a>
+        <a href="#">для водителей</a>
+      </div>
+      <div class="footer_info">
+        <a href="#">центр поддержки</a>
+        <a href="#">вакансии</a>
+        <a href="#">разработчики</a>
+        <a href="#">блог</a>
+        <a href="#">о нас</a>
+      </div>
+      <a href="#" class="footer_language">русский</a>
+    </div>
+    <div class="footer_messengers"></div>
+  </footer>
   <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script> -->
 </body>
 
