--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../dist/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="../dist/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="../dist/css/style.min.css">
+  <script src="https://kit.fontawesome.com/d35f85404c.js" crossorigin="anonymous"></script>
 
   <title>Uber777</title>
 </head>
@@ -78,7 +79,7 @@
         <div class="col-md-6">
           <div class="capability_block">
             <div class="capability_img">
-              <i class="fa fa-purse"></i>
+              <i class="far far-purse"></i>
             </div>
             <div class="capability_text">
               <h3 class="capability_title">Никаких наличных, оплата происходит автоматически</h3>
@@ -92,7 +93,7 @@
         <div class="col-md-6">
           <div class="capability_block">
             <div class="capability_img">
-              <i class="fa fa-timeline"></i>
+              <i class="far far-timeline"></i>
             </div>
             <div class="capability_text">
               <h3 class="capability_title">Комиссия 8% + БОНУСЫ</h3>
@@ -104,7 +105,7 @@
         <div class="col-md-6">
           <div class="capability_block">
             <div class="capability_img">
-              <i class="fa fa-money"></i>
+              <i class="far far-money"></i>
             </div>
             <div class="capability_text">
               <h3 class="capability_title">Высокий доход с гарантированнымивыплатами</h3>
@@ -117,7 +118,7 @@
         <div class="col-md-6">
           <div class="capability_block">
             <div class="capability_img">
-              <i class="fa fa-day"></i>
+              <i class="far far-day"></i>
             </div>
             <div class="capability_text">
               <h3 class="capability_title">Работа в удобное время, никакихграфиков</h3>
@@ -130,7 +131,7 @@
         <div class="col-md-6">
           <div class="capability_block">
             <div class="capability_img">
-              <i class="fa fa-key"></i>
+              <i class="far far-key"></i>
             </div>
             <div class="capability_text">
               <h3 class="capability_title">Комфортное, прозрачное и простоеподключение</h3>
@@ -143,7 +144,7 @@
         <div class="col-md-6">
           <div class="capability_block">
             <div class="capability_img">
-              <i class="fa fa-map"></i>
+              <i class="far far-map"></i>
             </div>
             <div class="capability_text">
               <h3 class="capability_title">Всегда большое количество заказов</h3>
@@ -156,7 +157,7 @@
         <div class="col-md-6">
           <div class="capability_block">
             <div class="capability_img">
-              <i class="fa fa-phone"></i>
+              <i class="far far-phone"></i>
             </div>
             <div class="capability_text">
               <h3 class="capability_title">Круглосуточная поддержка</h3>
@@ -168,7 +169,7 @@
         <div class="col-md-6">
           <div class="capability_block">
             <div class="capability_img">
-              <i class="fa fa-car"></i>
+              <i class="far far-car"></i>
             </div>
             <div class="capability_text">
               <h3 class="capability_title">Без шашечек и наклеек</h3>
@@ -312,7 +313,26 @@
   </section>
   <footer>
     <div class="footer_icon">
-      <i class="fa fa-vk" aria-hidden="true"></i>
+      <div class="footer_social">
+        <a href="#" class="footer_social_item">
+          <i class="fa_messenger fa fa-vk"></i>
+        </a>
+      </div>
+      <div class="footer_social">
+        <a href="#" class="footer_social_item">
+          <i class="fa_messenger fa-brands fa-instagram"></i>
+        </a>
+      </div>
+      <div class="footer_social">
+        <a href="#" class="footer_social_item">
+          <i class="fa_messenger fa-brands fa-twitter"></i>
+        </a>
+      </div>
+      <div class="footer_social">
+        <a href="#" class="footer_social_item">
+          <i class="fa_messenger fa fa-telegram"></i>
+        </a>
+      </div>
     </div>
     <div class="footer_content">
       <div class="footer_menu">
