--- a/src/index.html
+++ b/src/index.html
@@ -312,44 +312,53 @@
     </div>
   </section>
   <footer>
-    <div class="footer_icon">
-      <div class="footer_social">
-        <a href="#" class="footer_social_item">
-          <i class="fa_messenger fa fa-vk"></i>
-        </a>
+    <div class="footer_divider"></div>
+    <div class="footer_wrapper">
+      <div>
+        <div class="footer_social">
+          <a href="#" class="footer_social_item">
+            <i class="fa fa-vk"></i>
+          </a>
+          <a href="#" class="footer_social_item">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a href="#" class="footer_social_item">
+            <i class="fa-brands fa-twitter"></i>
+          </a>
+          <a href="#" class="footer_social_item">
+            <i class="fa fa-telegram"></i>
+          </a>
+        </div>
       </div>
-      <div class="footer_social">
-        <a href="#" class="footer_social_item">
-          <i class="fa_messenger fa-brands fa-instagram"></i>
-        </a>
+      <div class="footer_links">
+        <div class="footer_links_main">
+          <a href="#">на главную</a>
+          <a href="#">города</a>
+          <a href="#">для водителей</a>
+        </div>
+        <div class="footer_links_sub">
+          <a href="#">центр поддержки</a>
+          <a href="#">вакансии</a>
+          <a href="#">разработчики</a>
+          <a href="#">блог</a>
+          <a href="#">о нас</a>
+        </div>
+        <a href="#" class="footer_links_lang">русский</a>
       </div>
-      <div class="footer_social">
-        <a href="#" class="footer_social_item">
-          <i class="fa_messenger fa-brands fa-twitter"></i>
-        </a>
-      </div>
-      <div class="footer_social">
-        <a href="#" class="footer_social_item">
-          <i class="fa_messenger fa fa-telegram"></i>
-        </a>
+      <div>
+        <div class="footer_mobile">
+          <a href="#">
+            <img src="img/app_store.png" alt="App Store">
+          </a>
+          <a href="#">
+            <img src="img/google_play.png" alt="Google play">
+          </a>
+          <a href="#">
+            <img src="img/windows_store.png" alt="Windows store">
+          </a>
+        </div>
       </div>
     </div>
-    <div class="footer_content">
-      <div class="footer_menu">
-        <a href="#">на главную</a>
-        <a href="#">города</a>
-        <a href="#">для водителей</a>
-      </div>
-      <div class="footer_info">
-        <a href="#">центр поддержки</a>
-        <a href="#">вакансии</a>
-        <a href="#">разработчики</a>
-        <a href="#">блог</a>
-        <a href="#">о нас</a>
-      </div>
-      <a href="#" class="footer_language">русский</a>
-    </div>
-    <div class="footer_messengers"></div>
   </footer>
   <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script> -->
 </body>
