--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
             <div class="subheader_call">Звоните нам ежедневно</div>
             <a href="tel:+74957970988" class="subheader_phone">8 495 797 09 88</a>
           </div>
-          <div class="col-md-2">
+          <div class="col-md-3 col-lg-2">
             <button class="subheader_btn">заказать звонок</button>
           </div>
         </div>
@@ -71,110 +71,123 @@
       </div>
     </div>
   </section>
-  <section class="capability">
+
+  <section class="reasons">
     <div class="container">
-      <div class="capability_label label">преимущества</div>
-      <h2 class="capability_header title">8 причин начать работать с нами</h2>
+      <div class="label">преимущества</div>
+      <h2 class="title">8 причин начать работать с нами</h2>
       <div class="row">
         <div class="col-md-6">
-          <div class="capability_block">
-            <div class="capability_img">
-              <i class="far far-purse"></i>
+          <div class="reasons_block">
+            <div class="reasons_round">
+              <img src="icon/purse.png" alt="reason">
             </div>
-            <div class="capability_text">
-              <h3 class="capability_title">Никаких наличных, оплата происходит автоматически</h3>
-              <p class="capability_info">Стоимость поездки оплачивается пассажиром с привязанной банковской карты, т.е.
-                нет никаких рисков связанных
-                с перевозкой наличности как для пассажира, так и для водителя, Вам не нужно искать мелкие деньги для
-                размена.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="capability_block">
-            <div class="capability_img">
-              <i class="far far-timeline"></i>
-            </div>
-            <div class="capability_text">
-              <h3 class="capability_title">Комиссия 8% + БОНУСЫ</h3>
-              <p class="capability_info">У нас минимальная комиссия и мы выплачиваем бонусы за каждую поездку, некоторые
-                наши конкуренты оставляют бонусы себе. Мы работаем честно и с нами водители зарабатывают больше!</p>
+            <div class="reasons_descr">
+              <div class="reasons_subtitle">Никаких наличных, оплата происходит автоматически</div>
+              <div class="reasons_text">
+                Стоимость поездки оплачивается пассажиром с привязанной банковской карты, т.е. нет никаких рисков
+                связанных с перевозкой наличности как для пассажира, так и для водителя, Вам не нужно искать мелкие
+                деньги для размена.
+              </div>
             </div>
           </div>
         </div>
         <div class="col-md-6">
-          <div class="capability_block">
-            <div class="capability_img">
-              <i class="far far-money"></i>
+          <div class="reasons_block">
+            <div class="reasons_round">
+              <img src="icon/timeline.png" alt="reason">
             </div>
-            <div class="capability_text">
-              <h3 class="capability_title">Высокий доход с гарантированнымивыплатами</h3>
-              <p class="capability_info">Мы выплачиваем заработную плату на личную банковскую карту водителя! Вам не
-                нужно оформлять ООО, ИП, платить налоги, подавать декларацию, оплачивать бухгалтерские услуги и ведение
-                банковского счета.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="capability_block">
-            <div class="capability_img">
-              <i class="far far-day"></i>
-            </div>
-            <div class="capability_text">
-              <h3 class="capability_title">Работа в удобное время, никакихграфиков</h3>
-              <p class="capability_info">Вы просто нажимаете кнопку выйти на линию для начала работы, когда решите
-                закончить, нажимаете выйти с линии. Вы можете подраба-
-                тывать только утром, вечером, в выходные или праздничные дни! </p>
+            <div class="reasons_descr">
+              <div class="reasons_subtitle">Комиссия 8% + БОНУСЫ</div>
+              <div class="reasons_text">
+                У нас минимальная комиссия и мы выплачиваем бонусы за каждую поездку, некоторые наши конкуренты
+                оставляют бонусы себе. Мы работаем честно и с нами водители зарабатывают больше!
+              </div>
             </div>
           </div>
         </div>
         <div class="col-md-6">
-          <div class="capability_block">
-            <div class="capability_img">
-              <i class="far far-key"></i>
+          <div class="reasons_block">
+            <div class="reasons_round">
+              <img src="icon/money.png" alt="reason">
             </div>
-            <div class="capability_text">
-              <h3 class="capability_title">Комфортное, прозрачное и простоеподключение</h3>
-              <p class="capability_info">Мы подключаем дистанционно и бесплатно, Вам нет необходимости приезжать к нам!
-                Вы присылаете нам копии документов, мы регистрируем Вас и присылаем данные для подключения, через 1-2
-                дня Вы можете начинать работать!</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="capability_block">
-            <div class="capability_img">
-              <i class="far far-map"></i>
-            </div>
-            <div class="capability_text">
-              <h3 class="capability_title">Всегда большое количество заказов</h3>
-              <p class="capability_info">Приложение показывает, где на данный момент больше всего заказов и где
-                действуют повышенные тарифы. У Вас не будет простоя и холостых пробегов. Наши пассажиры всегда приятные
-                и абсолютно неконфликтные люди, которых приятно возить.</p>
+            <div class="reasons_descr">
+              <div class="reasons_subtitle">Высокий доход с гарантированными выплатами</div>
+              <div class="reasons_text">
+                Мы выплачиваем заработную плату на личную банковскую карту водителя! Вам не нужно оформлять ООО, ИП,
+                платить налоги, подавать декларацию, оплачивать бухгалтерские услуги и ведение банковского счета.
+              </div>
             </div>
           </div>
         </div>
         <div class="col-md-6">
-          <div class="capability_block">
-            <div class="capability_img">
-              <i class="far far-phone"></i>
+          <div class="reasons_block">
+            <div class="reasons_round">
+              <img src="icon/day.png" alt="reason">
             </div>
-            <div class="capability_text">
-              <h3 class="capability_title">Круглосуточная поддержка</h3>
-              <p class="capability_info">В Uber действует круглосуточная поддержка водителей по электронной почте. Если
-                что-то непонятно, Вы всегда можете задать вопрос через On-line консультацию.</p>
+            <div class="reasons_descr">
+              <div class="reasons_subtitle">Работа в удобное время, никаких графиков</div>
+              <div class="reasons_text">
+                Вы просто нажимаете кнопку выйти на линию для начала работы, когда решите закончить, нажимаете выйти с
+                линии. Вы можете подрабатывать только утром, вечером, в выходные или праздничные дни!
+              </div>
             </div>
           </div>
         </div>
         <div class="col-md-6">
-          <div class="capability_block">
-            <div class="capability_img">
-              <i class="far far-car"></i>
+          <div class="reasons_block">
+            <div class="reasons_round">
+              <img src="icon/key.png" alt="reason">
             </div>
-            <div class="capability_text">
-              <h3 class="capability_title">Без шашечек и наклеек</h3>
-              <p class="capability_info">Вам не нужно менять цвет, устанавливать «шашки» на автомобиль и обклеивать его
-                наклейками.</p>
+            <div class="reasons_descr">
+              <div class="reasons_subtitle">Комфортное, прозрачное и простое подключение</div>
+              <div class="reasons_text">
+                Мы подключаем дистанционно и бесплатно, Вам нет необходимости приезжать к нам! Вы присылаете нам копии
+                документов, мы регистрируем Вас и присылаем данные для подключения, через 1-2 дня Вы можете начинать
+                работать!
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="reasons_block">
+            <div class="reasons_round">
+              <img src="icon/map.png" alt="reason">
+            </div>
+            <div class="reasons_descr">
+              <div class="reasons_subtitle">Всегда большое количество заказов</div>
+              <div class="reasons_text">
+                Приложение показывает, где на данный момент больше всего заказов и где действуют повышенные тарифы. У
+                Вас не будет простоя и холостых пробегов. Наши пассажиры всегда приятные и абсолютно неконфликтные люди,
+                которых приятно возить.
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="reasons_block">
+            <div class="reasons_round">
+              <img src="icon/phone.png" alt="reason">
+            </div>
+            <div class="reasons_descr">
+              <div class="reasons_subtitle">Круглосуточная поддержка</div>
+              <div class="reasons_text">
+                В Uber действует круглосуточная поддержка водителей по электронной почте. Если что-то непонятно, Вы
+                всегда можете задать вопрос через On-line консультацию.
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="reasons_block">
+            <div class="reasons_round">
+              <img src="icon/car.png" alt="reason">
+            </div>
+            <div class="reasons_descr">
+              <div class="reasons_subtitle">Без шашечек и наклеек</div>
+              <div class="reasons_text">
+                Вам не нужно менять цвет, устанавливать «шашки» на автомобиль и обклеивать его наклейками.
+              </div>
             </div>
           </div>
         </div>
