--- a/src/index.html
+++ b/src/index.html
@@ -19,43 +19,49 @@
 <!-- Shift+Alt+F -->
 
 <body>
-  <header class="header">
+  <header>
     <nav>
-      <div class="container">
-        <ul class="menu">
-          <li class="menu_item"><a href="#" class="menu_link">Главная</a></li>
-          <li class="menu_item"><a href="#" class="menu_link">Со своим автомобилем</a></li>
-          <li class="menu_item"><a href="#" class="menu_link">На автомобиле компании</a></li>
-          <li class="menu_item"><a href="#" class="menu_link">Требования</a></li>
-          <li class="menu_item"><a href="#" class="menu_link">Контакты</a></li>
-          <li class="menu_item"><a href="#" class="menu_link">Оставить заявку</a></li>
-        </ul>
-      </div>
+        <div class="container">
+            <ul class="menu menu_active">
+                <li class="menu_item"><a href="#" class="menu_link">Главная</a></li>
+                <li class="menu_item"><a href="#" class="menu_link">Со своим автомобилем</a></li>
+                <li class="menu_item"><a href="#" class="menu_link">На автомобиле компании</a></li>
+                <li class="menu_item"><a href="#" class="menu_link">Требования</a></li>
+                <li class="menu_item"><a href="#" class="menu_link">Контакты</a></li>
+                <li class="menu_item"><a href="#" class="menu_link">Оставить заявку</a></li>
+            </ul>
+        </div>
+        <div class="hamburger hamburger_active">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
     </nav>
     <div class="subheader">
-      <div class="container">
-        <!-- p.s  col без row работает не правильно!!! -->
-        <div class="row">
-          <div class="col-md-4 offset-md-1">
-            <a href="#" class="subheader_logo"><img src="logo/Logo.png" alt=""></a>
-            <div class="subheader_official">Официальный партнер Uber в Москве</div>
-          </div>
-          <div class="col-md-3 offset-md-1 col-xl-2 offset-xl-2">
-            <div class="subheader_call">Звоните нам ежедневно</div>
-            <a href="tel:+74957970988" class="subheader_phone">8 495 797 09 88</a>
-          </div>
-          <div class="col-md-3 col-lg-2">
-            <button class="subheader_btn">заказать звонок</button>
-          </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 offset-md-1">
+                    <a href="#" class="subheader_logo"><img src="logo/Logo.png" alt="logo"></a>
+                    <div class="subheader_official">Официальный партнер Uber в Москве</div>
+                </div>
+
+                <div class="col-md-2 offset-md-2">
+                    <div class="subheader_call">Звоните нам ежедневно</div>
+                    <a href="tel:84957970988" class="subheader_phone">8 495 797 09 88</a>
+                </div>
+
+                <div class="col-md-2">
+                    <button class="subheader_btn">заказать звонок</button>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </header>
+</header>
 
   <section class="promo">
     <div class="container">
       <div class="row">
-        <div class="col-md-10 offset-md-1">
+        <div class="col-md-12 offset-md-0 col-lg-10 offset-lg-1">
           <h1 class="promo_header">КОМПАНИЯ UBER PARTNERS!</h1>
           <h2 class="promo_subheader">ПРИГЛАШАЕМ ВОДИТЕЛЕЙ! НА СВОЕМ АВТО!</h2>
           <div class="promo_descr">
@@ -373,6 +379,8 @@
       </div>
     </div>
   </footer>
+
+  <script src="js/script.js"></script>
   <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/js/bootstrap.min.js" integrity="VjEeINv9OSwtWFLAtmc4JCtEJXXBub00gtSnszmspDLCtC0I4z4nqz7rEFbIZLLU" crossorigin="anonymous"></script> -->
 </body>
 
